tyring to fix nav bar on mobile

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -636,7 +636,7 @@ header{
   outline:none;
   z-index:10000000000000;
 }
-.cross{
+*/ .cross{
   background:none;
   position:absolute;
   top:0px;
@@ -650,8 +650,8 @@ header{
   cursor:pointer;
   outline:none;
   z-index:10000000000000;
-}
-.menu{
+} /*
+#menu{
     z-index:1000000; 
     font-weight:bold; 
     font-size:0.8em; 
@@ -660,38 +660,38 @@ header{
     position:absolute; 
     text-align:center;
 }
-.menu ul {
+#menu ul {
     margin: 0; 
     padding: 0; 
     list-style-type: none; 
     list-style-image: none;
 }
-.menu li {
+#menu li {
     display: block;   
     padding:15px 0 15px 0; 
     border-bottom:#1d1f20 1px solid;
 }
-.menu li:hover{
+#menu li:hover{
     display: block;    
     background:#181818; 
     padding:15px 0 15px 0; 
     border-bottom:#1d1f20 1px solid;
 }
-.menu ul li a { 
+#menu ul li a { 
     text-decoration:none;  
     margin: 0px; 
     color:#fff;
 }
-.menu ul li a:hover {  
+#menu ul li a:hover {  
     color: #fff;
     text-decoration:none;
 }
 
-.menu a{
+#menu a{
     text-decoration:none;
     color:white;
 }
-.menu a:hover{
+#menu a:hover{
     text-decoration:none; 
     color:white;
 }
@@ -703,59 +703,81 @@ header{
   margin:0 auto;
 } */
 /* --------------Second hamburger attempt-------------- */
+ul li img {
+ width: 25%; 
+display:inline-block; 
+    float:left;
+    padding: 10px; 
+}
+
+
 /* Remove margins and padding from the list, and add a black background color */
-ul.topnav {
+ul#topnav {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+   overflow: hidden; 
     background-color: #333;
-}
+} 
 
 /* Float the list items side by side */
-ul.topnav li {float: left;}
+ul#topnav li {float: left;} 
 
 /* Style the links inside the list items */
-ul.topnav li a {
+ul#topnav li a {
     display: inline-block;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 12px 14px;
     text-decoration: none;
     transition: 0.3s;
     font-size: 17px;
-}
+} 
 
 /* Change background color of links on hover */
-ul.topnav li a:hover {background-color: #111;}
+ul#topnav li a:hover {background-color: #111;} 
 
 /* Hide the list item that contains the link that should open and close the topnav on small screens */
-ul.topnav li.icon {display: none;}
+ul#topnav li#icon {display: none;} 
 
 /* --- Media Queries --*/ 
 /* When the screen is less than 680 pixels wide, hide all list items, except for the first one ("Home"). Show the list item that contains the link to open and close the topnav (li.icon) */
-@media screen and (max-width:680px) {
-  ul.topnav li:not(:first-child) {display: none;}
-  ul.topnav li.icon {
+@media screen and (max-width:900px) {
+  ul#topnav li:not(:first-child) {display: none;}
+  ul#topnav li#icon {
     float: right;
     display: inline-block;
   }
-}
+} 
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens */
-@media screen and (max-width:850px) {
-  ul.topnav.responsive {position: relative;}
-  ul.topnav.responsive li.icon {
+@media screen and (max-width:900px) {
+  ul#topnav.responsive {position: relative;}
+  ul#topnav.responsive li#icon {
     position: absolute;
     right: 0;
     top: 0;
   }
-  ul.topnav.responsive li {
+  ul#topnav.responsive li {
     float: none;
     display: inline;
   }
-  ul.topnav.responsive li a {
+  ul#topnav.responsive li a {
     display: block;
     text-align: left;
   }
+} 
+
+/* ------Hamburgler ----- */ 
+/*#icon, #icon:before, #icon:after { 
+
+  content: '';
+  position: absolute;
+  border-radius: 1em;
+  height: 2px;
+  width: 26px;
+  background: black;
+  transition: all 0.2s ease
 }
+#icon:after { top: 0.75em}
+#icon:before {top: -0.55em} */
